--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perinci-Tx-Manager
 
-0.28     2012-08-10 (SHARYANTO) (not yet released)
+0.28     2012-08-10 (SHARYANTO)
 
          First release, split to make Perinci dist empty (that dist was a
          growing mixed bag and caused headache in dependencies).
