--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perinci-Tx-Manager
 
+0.29     2012-08-16 (SHARYANTO) (not yet released)
+
+         First release, split to make Perinci dist empty (that dist was a
+         growing mixed bag and caused headache in dependencies).
+
+
 0.28     2012-08-10 (SHARYANTO)
 
          First release, split to make Perinci dist empty (that dist was a
