--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Revision history for Perinci-Tx-Manager
 
+0.30     2012-08-23 (SHARYANTO) (not yet released)
+
+         [INCOMPATIBLE CHANGES]
+
+         - Now follow Rinci 1.1.26 (transaction protocol version bumped to v=2,
+           no longer uses undo protocol).
+
+         - Database format changed from v=4 to v=5, due some tables being
+           renamed.
+
+
 0.29     2012-08-16 (SHARYANTO)
 
          [INCOMPATIBLE CHANGES]
