--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perinci-Tx-Manager
 
+0.31     2012-08-25 (SHARYANTO)
+
+         No functional changes. Fix bug in recovery of crashed redo. Add more
+         tests.
+
+
 0.30     2012-08-24 (SHARYANTO)
 
          [INCOMPATIBLE CHANGES]
