--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perinci-Tx-Manager
 
+0.32     2012-08-25 (SHARYANTO)
+
+         Implement confirmation (Rinci 1.1.27). Pass 'confirm' => 1 to action()
+         to pass '-confirm' special argument to function.
+
+
 0.31     2012-08-25 (SHARYANTO)
 
          No functional changes. Fix bug in recovery of crashed redo. Add more
