--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Perinci-Tx-Manager
 
-0.34     2012-08-25 (SHARYANTO)
+0.35     2012-08-29 (SHARYANTO)
+
+         Some fixes and tweaks for Test::Perinci::Tx::Manager.
+
+
+0.34     2012-08-28 (SHARYANTO)
 
          - test_tx_action(): Add 'before_undo' parameter for testing change of
            state between do and undo.
@@ -8,14 +13,14 @@ Revision history for Perinci-Tx-Manager
          - Nicer error message for undo() & redo(), like action().
 
 
-0.33     2012-08-25 (SHARYANTO)
+0.33     2012-08-28 (SHARYANTO)
 
          Pass special arguments to functions: '-tx_recovery' => 1 when during
          recovery, and '-tx_rollback' => 1 when during rollback, for informative
          purposes.
 
 
-0.32     2012-08-25 (SHARYANTO)
+0.32     2012-08-28 (SHARYANTO)
 
          Implement confirmation (Rinci 1.1.27). Pass 'confirm' => 1 to action()
          to pass '-confirm' special argument to function.
