--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perinci-Tx-Manager
 
+0.49     2014-05-01 (SHARYANTO)
+
+         - [Bugfix] Make sure subtest has at least one test (previously
+           {before,after}_{do,undo} can fail if the hook doesn't specify any
+           testing.
+
+
 0.48     2014-05-01 (SHARYANTO)
 
          - No functional changes.
