--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perinci-Tx-Manager
 
+0.52    2015-08-19 (PERLANCAR)
+
+	- No functional changes.
+
+	- Hide package declaration so it can be indexed by PAUSE.
+
+
 0.51    2015-08-18 (PERLANCAR)
 
 	- No functional changes.
