--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perinci-Tx-Manager
 
+0.53    2015-09-04 (PERLANCAR)
+
+	- No functional changes.
+
+	- [dist] Move spec prereqs from RuntimeRequires to
+	  DevelopRecommends to reduce deps but still allow indicating spec
+	  requirement.
+
+
 0.52    2015-08-19 (PERLANCAR)
 
 	- No functional changes.
