--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.57    2017-07-10 (PERLANCAR)
+
+	- No functional changes.
+
+	- Replace Log::Any with Log::ger.
+
+
 0.56    2016-06-10 (PERLANCAR)
 
 	- No functional changes.
